--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
+    <script src="index.js">
+
+    </script>
 </head>
 <body>
-    <h1>Hello Asad</h1>
-    <h>How are you??</h>
+    
 </body>
 </html>
